[gd_scene load_steps=9 format=3 uid="uid://dk2uxsqyi2ylg"]

[ext_resource type="PackedScene" uid="uid://bmu2cagi6ktli" path="res://game/arena/arena.tscn" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://d3xbk3giys87o" path="res://game/main.gd" id="1_vop5m"]
[ext_resource type="PackedScene" uid="uid://jf2xhx0ukpmu" path="res://game/paddle/paddle.tscn" id="2_h2yge"]
[ext_resource type="FontFile" uid="uid://b1q1rf2rnin7t" path="res://assets/Kenney Bold.ttf" id="5_lquwl"]
[ext_resource type="AudioStream" uid="uid://cjbtry5bc735s" path="res://game/resources/audio/ball_got_stuck.ogg" id="5_wjctj"]
[ext_resource type="AudioStream" uid="uid://b43jdr6lsw452" path="res://game/resources/audio/right_player_scores.ogg" id="6_xkbyp"]
[ext_resource type="AudioStream" uid="uid://dg4e7pjqxduk7" path="res://game/resources/audio/left_player_scores.ogg" id="7_lx3aj"]

[sub_resource type="Curve3D" id="Curve3D_lquwl"]
closed = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0.3, 2, 0, 0, 0, 0, 0, 0, 0, 0.3, -2),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[node name="Main" type="Node"]
script = ExtResource("1_vop5m")
right_player_score_sound = ExtResource("6_xkbyp")
left_player_score_sound = ExtResource("7_lx3aj")

[node name="Arena" parent="." instance=ExtResource("1_0xm2m")]

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10)
projection = 1
size = 6.5
far = 15.0

[node name="SunPivot" type="Marker3D" parent="."]
transform = Transform3D(0.965926, -0.0669873, 0.25, 0.258819, 0.25, -0.933013, 0, 0.965926, 0.258819, 0, 0, 0)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="SunPivot"]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, -1, 0, -4)
shadow_enabled = true

[node name="RightPaddle" parent="." instance=ExtResource("2_h2yge")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0.3, 0)

[node name="LeftPaddle" parent="." instance=ExtResource("2_h2yge")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0.3, 0)
player_type = 1

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_lquwl")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 2)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftScoreLabel" type="Label" parent="UI"]
layout_mode = 1
offset_right = 250.0
offset_bottom = 250.0
theme_override_fonts/font = ExtResource("5_lquwl")
theme_override_font_sizes/font_size = 47
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightScoreLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_bottom = 250.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("5_lquwl")
theme_override_font_sizes/font_size = 47
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallSpawnTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="BallGotStuckSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_wjctj")
volume_db = -6.0

[node name="ScoreOccurredSound" type="AudioStreamPlayer3D" parent="."]

[connection signal="timeout" from="BallSpawnTimer" to="." method="_on_ball_spawn_timer_timeout"]
